Update for Infinya

--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -1789,7 +1789,7 @@
     <value>Nachricht</value>
   </data>
   <data name="(4-20MA)" xml:space="preserve">
-    <value>(4-20 Ma)</value>
+    <value>(4-20 mA)</value>
   </data>
   <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
     <value>Maximale Motorstromstärke überschritten (&gt;115 % der Nennstromstärke für 15 Sek.)</value>
