--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -2862,4 +2862,439 @@
   <data name="PlantOverview" xml:space="preserve">
     <value>סקירת צמח</value>
   </data>
+  <data name="SHREDDER ROTOR" xml:space="preserve">
+    <value>רוטור מגרסה</value>
+  </data>
+  <data name="SHREDDER SAFETY KEY" xml:space="preserve">
+    <value>מפתח בטיחות מגרס</value>
+  </data>
+  <data name="GEARBOX COOILNG FAN" xml:space="preserve">
+    <value>מאוורר קירור תיבת הילוכים</value>
+  </data>
+  <data name="PUSHER OIL PUMP" xml:space="preserve">
+    <value>משאבת שמן פושר</value>
+  </data>
+  <data name="COOLING SYSTEM - OIL RECIRC. PUMP" xml:space="preserve">
+    <value>מערכת קירור - Oil Recirc. לִשְׁאוֹב</value>
+  </data>
+  <data name="HYDRAULIC OIL COOILNG FAN" xml:space="preserve">
+    <value>מאוורר קירור שמן הידראולי</value>
+  </data>
+  <data name="MAINTENANCE AUX. HDRAULIC UNIT" xml:space="preserve">
+    <value>תחזוקה Aux. יחידה הדרולית</value>
+  </data>
+  <data name="HYDRAULIC OIL HEATING RESISTOR" xml:space="preserve">
+    <value>נגד חימום שמן הידראולי</value>
+  </data>
+  <data name="ROTOR COOLING VALVE" xml:space="preserve">
+    <value>שסתום קירור רוטור</value>
+  </data>
+  <data name="BYPASS - HIGH SPEED" xml:space="preserve">
+    <value>עוקף - מהירות גבוהה</value>
+  </data>
+  <data name="BYPASS - LOW SPEED" xml:space="preserve">
+    <value>עוקף - מהירות נמוכה</value>
+  </data>
+  <data name="PUSHER FORWARD/REVERSE" xml:space="preserve">
+    <value>דוחף קדימה/אחור</value>
+  </data>
+  <data name="SHREDDER HOPPER LEVEL" xml:space="preserve">
+    <value>רמת הופר מגרסה</value>
+  </data>
+  <data name="HYDRAULIC OIL TEMPERATURE" xml:space="preserve">
+    <value>טמפרטורת שמן הידראולי</value>
+  </data>
+  <data name="DOWNSTREAM OK FOR MATERIAL" xml:space="preserve">
+    <value>במורד הזרם אוקי לחומר</value>
+  </data>
+  <data name="SOREMA SHREDDER OK FOR MATERIAL" xml:space="preserve">
+    <value>Sorema Shredder בסדר לחומר</value>
+  </data>
+  <data name="SHREDER OPEN CYCLE" xml:space="preserve">
+    <value>Shreder Open Cycle</value>
+  </data>
+  <data name="SHREDDING CYCLE" xml:space="preserve">
+    <value>מחזור גריסה</value>
+  </data>
+  <data name="DIRECTIONONE" xml:space="preserve">
+    <value>כיוון אחד</value>
+  </data>
+  <data name="FORWARD" xml:space="preserve">
+    <value>קָדִימָה</value>
+  </data>
+  <data name="DIRECTIONTWO" xml:space="preserve">
+    <value>כיוון שני</value>
+  </data>
+  <data name="REVERSE" xml:space="preserve">
+    <value>לַהֲפוֹך</value>
+  </data>
+  <data name="SAFETY NOT OK" xml:space="preserve">
+    <value>בטיחות לא בסדר</value>
+  </data>
+  <data name="INVERTER POWER UP NOT OK" xml:space="preserve">
+    <value>הפעלת מהפך לא בסדר</value>
+  </data>
+  <data name="HIGH LOAD CONDITION" xml:space="preserve">
+    <value>מצב עומס גבוה</value>
+  </data>
+  <data name="GRILL POSITION OK" xml:space="preserve">
+    <value>מצב גריל בסדר</value>
+  </data>
+  <data name="GRILL POSITION NOT OK FOR RUNNING" xml:space="preserve">
+    <value>תנוחת גריל לא בסדר לריצה</value>
+  </data>
+  <data name="ROTOR COOLING" xml:space="preserve">
+    <value>קירור רוטור</value>
+  </data>
+  <data name="ROTOR COOLING NOT OK" xml:space="preserve">
+    <value>קירור הרוטור לא בסדר</value>
+  </data>
+  <data name="MOTOR CURRENT NOT OK FOR MATERIAL" xml:space="preserve">
+    <value>זרם מנוע לא בסדר עבור חומר</value>
+  </data>
+  <data name="PERSISTENT CURRENT (&gt;3 MIN) ABOVE MINIMUM WITH NO INCOMING MATERIAL" xml:space="preserve">
+    <value>זרם מתמשך (&gt;3 דקות) מעל המינימום ללא חומר נכנס</value>
+  </data>
+  <data name="(0-10V)" xml:space="preserve">
+    <value>(0-10V)</value>
+  </data>
+  <data name="POWER DISCONNECT (ON THE CABINET)" xml:space="preserve">
+    <value>ניתוק חשמל (על הארון)</value>
+  </data>
+  <data name="(1=RUNNING)" xml:space="preserve">
+    <value>(1=ריצה)</value>
+  </data>
+  <data name="GRILL POSITION CLOSED" xml:space="preserve">
+    <value>מצב גריל סגור</value>
+  </data>
+  <data name="GRILL POSITION LS" xml:space="preserve">
+    <value>מיקום גריל Ls</value>
+  </data>
+  <data name="STOPPED" xml:space="preserve">
+    <value>עצר</value>
+  </data>
+  <data name="ROTOR STOPPED" xml:space="preserve">
+    <value>הרוטור נעצר</value>
+  </data>
+  <data name="(1=STOPPED)" xml:space="preserve">
+    <value>(1=נעצר)</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD 1 (REACTION ARM)" xml:space="preserve">
+    <value>עומס יתר מכני 1 (זרוע תגובה)</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH 1" xml:space="preserve">
+    <value>מתג מגבלת מומנט מרבי 1</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD 2 (REACTION ARM)" xml:space="preserve">
+    <value>עומס יתר מכני 2 (זרוע תגובה)</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH 2" xml:space="preserve">
+    <value>מתג מגבלת מומנט מרבי 2</value>
+  </data>
+  <data name="(1=FORWARD)" xml:space="preserve">
+    <value>(1=העבר)</value>
+  </data>
+  <data name="(1=REVERSE)" xml:space="preserve">
+    <value>(1=הפוך)</value>
+  </data>
+  <data name="COMMAND STANDSTILL RELAY RESET" xml:space="preserve">
+    <value>איפוס ממסר עמידה בפקודה</value>
+  </data>
+  <data name="STANDSTILL RELAY RESET" xml:space="preserve">
+    <value>איפוס ממסר עמידה</value>
+  </data>
+  <data name="(1=RESET)" xml:space="preserve">
+    <value>(1=אפס)</value>
+  </data>
+  <data name="DISABLE COMPONENT ON START (SELECTOR)" xml:space="preserve">
+    <value>השבת רכיב בהתחלה (בורר)</value>
+  </data>
+  <data name="ON COMMAND (ANY DIRECTION)" xml:space="preserve">
+    <value>בפקודה (בכל כיוון)</value>
+  </data>
+  <data name="SELECTED DIRECTION" xml:space="preserve">
+    <value>כיוון נבחר</value>
+  </data>
+  <data name="ENABLE DIRECTION SELECTION (SHOW IN HMI)" xml:space="preserve">
+    <value>אפשר בחירת כיוון (הצג ב-Hmi)</value>
+  </data>
+  <data name="ALL CONDITIONS TO UNLOCK" xml:space="preserve">
+    <value>כל התנאים לביטול הנעילה</value>
+  </data>
+  <data name="SAFETY CONDITIONS NOT OK TO UNLOCK" xml:space="preserve">
+    <value>תנאי בטיחות לא בסדר כדי לפתוח</value>
+  </data>
+  <data name="KEY UNLOCKED WITHOUT UNLOCK COMMAND" xml:space="preserve">
+    <value>מפתח נעול ללא פקודת ביטול נעילה</value>
+  </data>
+  <data name="LOSS OF SAFETY CONDITIONS" xml:space="preserve">
+    <value>אובדן תנאי בטיחות</value>
+  </data>
+  <data name="SAFETIES" xml:space="preserve">
+    <value>בטיחות</value>
+  </data>
+  <data name="SAFETY KEY RELEASED" xml:space="preserve">
+    <value>מפתח בטיחות שוחרר</value>
+  </data>
+  <data name="(1=RELEASED, 0=TRAPPED)" xml:space="preserve">
+    <value>(1=פורסם, 0=כלוא)</value>
+  </data>
+  <data name="COMMAND RELEASE" xml:space="preserve">
+    <value>שחרור פקודה</value>
+  </data>
+  <data name="(1=UNLOCK)" xml:space="preserve">
+    <value>(1=ביטול נעילה)</value>
+  </data>
+  <data name="WAITING COOLING AFTER OVERLOAD" xml:space="preserve">
+    <value>ממתין לקירור לאחר עומס יתר</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>טמפרטורה מקסימלית של תיבת הילוכים</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE - STOP MOTOR" xml:space="preserve">
+    <value>טמפרטורה מקסימלית של תיבת הילוכים - מנוע עצור</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE TSHA" xml:space="preserve">
+    <value>תיבת הילוכים טמפרטורה מקסימלית Tsha</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE TSH" xml:space="preserve">
+    <value>תיבת הילוכים טמפרטורה מקסימלית Tsh</value>
+  </data>
+  <data name="HIDE START BUTTON ON HMI  (FALSE=SHOW START PB)" xml:space="preserve">
+    <value>הסתר לחצן התחל ב-Hmi (שקר=הצג התחלה Pb)</value>
+  </data>
+  <data name="READY TO START  (FALSE WHEN STARTED)" xml:space="preserve">
+    <value>מוכן להתחלה (שקר כשהתחיל)</value>
+  </data>
+  <data name="HYDRAULIC SAFETY" xml:space="preserve">
+    <value>בטיחות הידראולית</value>
+  </data>
+  <data name="HYDRAULIC UNIT SAFETIES NOT OK" xml:space="preserve">
+    <value>בטיחות יחידה הידראולית לא בסדר</value>
+  </data>
+  <data name="OIL FILTER NOT OK" xml:space="preserve">
+    <value>מסנן שמן לא בסדר</value>
+  </data>
+  <data name="OIL CIRCUIT SHUTOFF VALVE NOT OPEN" xml:space="preserve">
+    <value>שסתום סגירת מעגל שמן לא פתוח</value>
+  </data>
+  <data name="OIL FILTER" xml:space="preserve">
+    <value>מסנן שמן</value>
+  </data>
+  <data name="SHUTOFF VALVE 1" xml:space="preserve">
+    <value>שסתום סגירה 1</value>
+  </data>
+  <data name="SHUTOFF VALVE 2" xml:space="preserve">
+    <value>שסתום סגירה 2</value>
+  </data>
+  <data name="(1=RUN)" xml:space="preserve">
+    <value>(1=הפעלה)</value>
+  </data>
+  <data name="OIL TEMPERATURE OK FOR CIRCULATION" xml:space="preserve">
+    <value>טמפרטורת השמן בסדר למחזור</value>
+  </data>
+  <data name="OIL TEMPERATURE NOT OK FOR CIRCULATION" xml:space="preserve">
+    <value>טמפרטורת השמן לא בסדר למחזור</value>
+  </data>
+  <data name="OIL MINIMUM LEVEL" xml:space="preserve">
+    <value>רמת שמן מינימלית</value>
+  </data>
+  <data name="OIL MINIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>רמת שמן מינימום לא בסדר</value>
+  </data>
+  <data name="TEMPERATURE OK FOR COOLING" xml:space="preserve">
+    <value>טמפרטורה בסדר לקירור</value>
+  </data>
+  <data name="NO COOLING IS REQUIRED (LOW TEMPERATURE)" xml:space="preserve">
+    <value>אין צורך בקירור (טמפרטורה נמוכה)</value>
+  </data>
+  <data name="SHREDDER LOCAL+POWER DISCONNECT OPEN (BOTH)" xml:space="preserve">
+    <value>מגרסה מקומית+ניתוק חשמל פתוח (שניהם)</value>
+  </data>
+  <data name="SHREDDER DISCONNECTORS CLOSED" xml:space="preserve">
+    <value>מנתקי המגרסה סגורים</value>
+  </data>
+  <data name="SHREDDER SAFETY KEY EXTRACTED FORM THE LOCK" xml:space="preserve">
+    <value>מפתח בטיחות מגרסה חולץ מהמנעול</value>
+  </data>
+  <data name="SAFETY KEY NOT EXTRACTED" xml:space="preserve">
+    <value>מפתח בטיחות לא חולץ</value>
+  </data>
+  <data name="OIL TEMPERATURE OK FOR HEATING" xml:space="preserve">
+    <value>טמפרטורת שמן בסדר לחימום</value>
+  </data>
+  <data name="OIL DOES NOT NEED TO BE HEATED" xml:space="preserve">
+    <value>שמן לא צריך להתחמם</value>
+  </data>
+  <data name="COOLING VALVE IS NOT ON (ROTOR WILL BE STOPPED IN A SHORT TIME)" xml:space="preserve">
+    <value>שסתום קירור אינו פועל (הרוטור ייעצר תוך זמן קצר)</value>
+  </data>
+  <data name="COOLING VALVE IS NOT ON (ROTOR STOP)" xml:space="preserve">
+    <value>שסתום קירור לא פועל (עצירת רוטור)</value>
+  </data>
+  <data name="FAST SPEED" xml:space="preserve">
+    <value>מהירות גבוהה</value>
+  </data>
+  <data name="POSITION FORWARD NOT OK" xml:space="preserve">
+    <value>מיקום קדימה לא בסדר</value>
+  </data>
+  <data name="POSITION REVERSE NOT OK" xml:space="preserve">
+    <value>מיקום הפוך לא בסדר</value>
+  </data>
+  <data name="BOTH POSITIONS" xml:space="preserve">
+    <value>שני התפקידים</value>
+  </data>
+  <data name="DISABLED BY OPERATOR" xml:space="preserve">
+    <value>מושבת על ידי המפעיל</value>
+  </data>
+  <data name="READY FOR MEASURING" xml:space="preserve">
+    <value>מוכן למדידה</value>
+  </data>
+  <data name="COMPONENT PREPARED OK FOR PRODUCTION" xml:space="preserve">
+    <value>רכיב הוכן בסדר לייצור</value>
+  </data>
+  <data name="SENSOR ON (CAB ON + 24V SENSOR SUPPLY OK - AIN OR DIN)" xml:space="preserve">
+    <value>חיישן פועל (Cab On + אספקת חיישן 24V בסדר - Ain Or Din)</value>
+  </data>
+  <data name="HIGH TEMPERATURE WARNING" xml:space="preserve">
+    <value>אזהרת טמפרטורה גבוהה</value>
+  </data>
+  <data name="OIL MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>טמפרטורת שמן מרבית</value>
+  </data>
+  <data name="OIL TEMPERATURE" xml:space="preserve">
+    <value>טמפרטורת שמן</value>
+  </data>
+  <data name="DOWNSTREAM OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>במורד הזרם אישור (אות חיצוני)</value>
+  </data>
+  <data name="SOREMA PLANT OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>צמח סורמה בסדר כדי לקבל חומר</value>
+  </data>
+  <data name="(1=SOREMA OK TO RECEIVE)" xml:space="preserve">
+    <value>(1=סורמה בסדר לקבל)</value>
+  </data>
+  <data name="CYCLE INTERLOCKS" xml:space="preserve">
+    <value>שלובים למחזור</value>
+  </data>
+  <data name="PRODUCTION SPEED (IN CONSTANT MODE)" xml:space="preserve">
+    <value>מהירות ייצור (במצב קבוע)</value>
+  </data>
+  <data name="ROTOR REVERSE" xml:space="preserve">
+    <value>רוטור הפוך</value>
+  </data>
+  <data name="PUSHER STEP BACK + STOP MATERIAL (IF SELECTED)" xml:space="preserve">
+    <value>חומר דחף צעד אחורה + עצירה (אם נבחר)</value>
+  </data>
+  <data name="STOP UPSTREAM MATERIAL" xml:space="preserve">
+    <value>עצור חומר במעלה הזרם</value>
+  </data>
+  <data name="PRODUCTION SPEED - ADVANCING" xml:space="preserve">
+    <value>מהירות ייצור - מתקדם</value>
+  </data>
+  <data name="ENABLE" xml:space="preserve">
+    <value>לְאַפשֵׁר</value>
+  </data>
+  <data name="SWIPE ACCESS CARD TO UNLOCK" xml:space="preserve">
+    <value>החלק את כרטיס הגישה כדי לבטל את הנעילה</value>
+  </data>
+  <data name="SHREDDING" xml:space="preserve">
+    <value>רִטוּשׁ</value>
+  </data>
+  <data name="BUTTONS" xml:space="preserve">
+    <value>כפתורים</value>
+  </data>
+  <data name="PROCESS SIGNALS" xml:space="preserve">
+    <value>תהליך אותות</value>
+  </data>
+  <data name="TREND LIMITS" xml:space="preserve">
+    <value>מגבלות מגמה</value>
+  </data>
+  <data name="COMPONENT STATUS STD BITMASK" xml:space="preserve">
+    <value>מסכת סיביות סטד סטטוס רכיב</value>
+  </data>
+  <data name="FUNCTION" xml:space="preserve">
+    <value>פוּנקצִיָה</value>
+  </data>
+  <data name="PLCTAG" xml:space="preserve">
+    <value>Plctag</value>
+  </data>
+  <data name="HMIS BEACON PROTECTION" xml:space="preserve">
+    <value>HMI Beacon Protection</value>
+  </data>
+  <data name="SYS - CUMULATIVE HMIS BEACON" xml:space="preserve">
+    <value>Sys - מצטבר HMI Beacon</value>
+  </data>
+  <data name="SYS - ETHERNET SWITCH OK" xml:space="preserve">
+    <value>Sys - מתג Ethernet אוקי</value>
+  </data>
+  <data name="SYS - SIREN (FOR EXTERNAL USES)" xml:space="preserve">
+    <value>Sys - סירנה (לשימושים חיצוניים)</value>
+  </data>
+  <data name="SUBZONE SHREDDING" xml:space="preserve">
+    <value>גריסה של תת-אזור</value>
+  </data>
+  <data name="AUXILIARY TRANSFORMER SECONDARY PROTECTION" xml:space="preserve">
+    <value>הגנה משנית של שנאי עזר</value>
+  </data>
+  <data name="ANALOG OUTPUTS PROTECTION" xml:space="preserve">
+    <value>הגנה על יציאות אנלוגיות</value>
+  </data>
+  <data name="BUTTONSPANEL" xml:space="preserve">
+    <value>לוח כפתורים</value>
+  </data>
+  <data name="EXPORT TO CSV" xml:space="preserve">
+    <value>ייצוא ל-Csv</value>
+  </data>
+  <data name="TREND WINDOW" xml:space="preserve">
+    <value>חלון מגמה</value>
+  </data>
+  <data name="LIVE CHARTING" xml:space="preserve">
+    <value>תרשימים חיים</value>
+  </data>
+  <data name="MESSAGING" xml:space="preserve">
+    <value>העברת הודעות</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NO MATERIAL'   (0=NO MESSAGE)" xml:space="preserve">
+    <value>עיכוב להודעה 'ללא חומר' (0=ללא הודעה)</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NOT OK FOR PROCESS'   (0=NO MESSAGE)" xml:space="preserve">
+    <value>עיכוב להודעה 'לא בסדר לעיבוד' (0=אין הודעה)</value>
+  </data>
+  <data name="STOP FEEDING" xml:space="preserve">
+    <value>הפסק להאכיל</value>
+  </data>
+  <data name="RESTART FEEDING" xml:space="preserve">
+    <value>הפעל מחדש את ההאכלה</value>
+  </data>
+  <data name="EMPTY HOPPER" xml:space="preserve">
+    <value>הופר ריק</value>
+  </data>
+  <data name="SHREDDER" xml:space="preserve">
+    <value>מגרסה</value>
+  </data>
+  <data name="ROTOR" xml:space="preserve">
+    <value>רוטור</value>
+  </data>
+  <data name="PUSHER" xml:space="preserve">
+    <value>דוֹחֵף</value>
+  </data>
+  <data name="ENABLE MODULATION OF PUSHER ADVANCING SPEED" xml:space="preserve">
+    <value>אפשר אפנון של מהירות קידום הדוחף</value>
+  </data>
+  <data name="PUSHER MAXIMUM SPEED AT ROTOR MINIMUM CURRENT" xml:space="preserve">
+    <value>מהירות מרבית של דוחף בזרם מינימלי של הרוטור</value>
+  </data>
+  <data name="PUSHER MINIMUM SPEED AT ROTOR MAXIMUM CURRENT" xml:space="preserve">
+    <value>דחף מהירות מינימלית בזרם מירבי של הרוטור</value>
+  </data>
+  <data name="FINAL PUSHING TIME IN MAXIMUM FORWARD POSITION" xml:space="preserve">
+    <value>זמן דחיפה סופי במיקום מירבי קדימה</value>
+  </data>
+  <data name="PUSHER STEP-BACK TIME" xml:space="preserve">
+    <value>דחף זמן צעד אחורה</value>
+  </data>
+  <data name="LOW" xml:space="preserve">
+    <value>נָמוּך</value>
+  </data>
 </root>
