--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -2862,4 +2862,469 @@
   <data name="PlantOverview" xml:space="preserve">
     <value>Panoramica dell'impianto</value>
   </data>
+  <data name="SHREDDER ROTOR" xml:space="preserve">
+    <value>Rotore prerompitore</value>
+  </data>
+  <data name="SHREDDER SAFETY KEY" xml:space="preserve">
+    <value>Chiave di sicurezza prerompitore</value>
+  </data>
+  <data name="GEARBOX COOILNG FAN" xml:space="preserve">
+    <value>Ventola di raffreddamento del cambio</value>
+  </data>
+  <data name="PUSHER OIL PUMP" xml:space="preserve">
+    <value>Pompa dell'olio di spinta</value>
+  </data>
+  <data name="COOLING SYSTEM - OIL RECIRC. PUMP" xml:space="preserve">
+    <value>Sistema di raffreddamento - Ricirc. olio Pompa</value>
+  </data>
+  <data name="HYDRAULIC OIL COOILNG FAN" xml:space="preserve">
+    <value>Ventola di raffreddamento dell'olio idraulico</value>
+  </data>
+  <data name="MAINTENANCE AUX. HDRAULIC UNIT" xml:space="preserve">
+    <value>Manutenzione ausiliaria Gruppo idraulico</value>
+  </data>
+  <data name="HYDRAULIC OIL HEATING RESISTOR" xml:space="preserve">
+    <value>Resistenza di riscaldamento dell'olio idraulico</value>
+  </data>
+  <data name="ROTOR COOLING VALVE" xml:space="preserve">
+    <value>Valvola di raffreddamento del rotore</value>
+  </data>
+  <data name="BYPASS - HIGH SPEED" xml:space="preserve">
+    <value>Bypass - Alta velocità</value>
+  </data>
+  <data name="BYPASS - LOW SPEED" xml:space="preserve">
+    <value>Bypass - Bassa velocità</value>
+  </data>
+  <data name="PUSHER FORWARD/REVERSE" xml:space="preserve">
+    <value>Pulsante avanti/indietro</value>
+  </data>
+  <data name="SHREDDER HOPPER LEVEL" xml:space="preserve">
+    <value>Livello della tramoggia del trituratore</value>
+  </data>
+  <data name="HYDRAULIC OIL TEMPERATURE" xml:space="preserve">
+    <value>Temperatura dell'olio idraulico</value>
+  </data>
+  <data name="DOWNSTREAM OK FOR MATERIAL" xml:space="preserve">
+    <value>Ok a valle per materiale</value>
+  </data>
+  <data name="SOREMA SHREDDER OK FOR MATERIAL" xml:space="preserve">
+    <value>Sorema Shredder Ok per materiale</value>
+  </data>
+  <data name="SHREDER OPEN CYCLE" xml:space="preserve">
+    <value>Trituratore a ciclo aperto</value>
+  </data>
+  <data name="SHREDDING CYCLE" xml:space="preserve">
+    <value>Ciclo di triturazione</value>
+  </data>
+  <data name="DIRECTIONONE" xml:space="preserve">
+    <value>Direzioneuno</value>
+  </data>
+  <data name="FORWARD" xml:space="preserve">
+    <value>Inoltrare</value>
+  </data>
+  <data name="DIRECTIONTWO" xml:space="preserve">
+    <value>Direzione due</value>
+  </data>
+  <data name="REVERSE" xml:space="preserve">
+    <value>Inversione</value>
+  </data>
+  <data name="SAFETY NOT OK" xml:space="preserve">
+    <value>Sicurezza non ok</value>
+  </data>
+  <data name="INVERTER POWER UP NOT OK" xml:space="preserve">
+    <value>Accensione dell'inverter non corretta</value>
+  </data>
+  <data name="HIGH LOAD CONDITION" xml:space="preserve">
+    <value>Condizione di carico elevato</value>
+  </data>
+  <data name="GRILL POSITION OK" xml:space="preserve">
+    <value>Posizione griglia OK</value>
+  </data>
+  <data name="GRILL POSITION NOT OK FOR RUNNING" xml:space="preserve">
+    <value>Posizione della griglia non adatta per la corsa</value>
+  </data>
+  <data name="ROTOR COOLING" xml:space="preserve">
+    <value>Raffreddamento del rotore</value>
+  </data>
+  <data name="ROTOR COOLING NOT OK" xml:space="preserve">
+    <value>Raffreddamento del rotore non corretto</value>
+  </data>
+  <data name="MOTOR CURRENT NOT OK FOR MATERIAL" xml:space="preserve">
+    <value>Corrente del motore non adatta al materiale</value>
+  </data>
+  <data name="PERSISTENT CURRENT (&gt;3 MIN) ABOVE MINIMUM WITH NO INCOMING MATERIAL" xml:space="preserve">
+    <value>Corrente persistente (&gt;3 min) superiore al minimo senza materiale in ingresso</value>
+  </data>
+  <data name="(0-10V)" xml:space="preserve">
+    <value>(0-10V)</value>
+  </data>
+  <data name="POWER DISCONNECT (ON THE CABINET)" xml:space="preserve">
+    <value>Scollegamento dell'alimentazione (sull'armadio)</value>
+  </data>
+  <data name="(1=RUNNING)" xml:space="preserve">
+    <value>(1=In esecuzione)</value>
+  </data>
+  <data name="GRILL POSITION CLOSED" xml:space="preserve">
+    <value>Posizione griglia chiusa</value>
+  </data>
+  <data name="GRILL POSITION LS" xml:space="preserve">
+    <value>Posizione griglia Ls</value>
+  </data>
+  <data name="STOPPED" xml:space="preserve">
+    <value>Fermato</value>
+  </data>
+  <data name="ROTOR STOPPED" xml:space="preserve">
+    <value>Rotore fermo</value>
+  </data>
+  <data name="(1=STOPPED)" xml:space="preserve">
+    <value>(1=Arrestato)</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD 1 (REACTION ARM)" xml:space="preserve">
+    <value>Sovraccarico meccanico 1 (braccio di reazione)</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH 1" xml:space="preserve">
+    <value>Limitatore di coppia massima 1</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD 2 (REACTION ARM)" xml:space="preserve">
+    <value>Sovraccarico meccanico 2 (braccio di reazione)</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH 2" xml:space="preserve">
+    <value>Limitatore di coppia massima 2</value>
+  </data>
+  <data name="(1=FORWARD)" xml:space="preserve">
+    <value>(1=Avanti)</value>
+  </data>
+  <data name="(1=REVERSE)" xml:space="preserve">
+    <value>(1=Inverti)</value>
+  </data>
+  <data name="COMMAND STANDSTILL RELAY RESET" xml:space="preserve">
+    <value>Comando Ripristino relè di arresto</value>
+  </data>
+  <data name="STANDSTILL RELAY RESET" xml:space="preserve">
+    <value>Ripristino del relè di arresto</value>
+  </data>
+  <data name="(1=RESET)" xml:space="preserve">
+    <value>(1=Reimposta)</value>
+  </data>
+  <data name="DISABLE COMPONENT ON START (SELECTOR)" xml:space="preserve">
+    <value>Disattiva componente all'avvio (selettore)</value>
+  </data>
+  <data name="ON COMMAND (ANY DIRECTION)" xml:space="preserve">
+    <value>A comando (qualsiasi direzione)</value>
+  </data>
+  <data name="SELECTED DIRECTION" xml:space="preserve">
+    <value>Direzione selezionata</value>
+  </data>
+  <data name="ENABLE DIRECTION SELECTION (SHOW IN HMI)" xml:space="preserve">
+    <value>Abilita selezione direzione (Mostra in Hmi)</value>
+  </data>
+  <data name="ALL CONDITIONS TO UNLOCK" xml:space="preserve">
+    <value>Tutte le condizioni per sbloccare</value>
+  </data>
+  <data name="SAFETY CONDITIONS NOT OK TO UNLOCK" xml:space="preserve">
+    <value>Le condizioni di sicurezza non sono adatte per lo sblocco</value>
+  </data>
+  <data name="KEY UNLOCKED WITHOUT UNLOCK COMMAND" xml:space="preserve">
+    <value>Chiave sbloccata senza comando di sblocco</value>
+  </data>
+  <data name="LOSS OF SAFETY CONDITIONS" xml:space="preserve">
+    <value>Perdita delle condizioni di sicurezza</value>
+  </data>
+  <data name="SAFETIES" xml:space="preserve">
+    <value>Sicurezze</value>
+  </data>
+  <data name="SAFETY KEY RELEASED" xml:space="preserve">
+    <value>Chiave di sicurezza rilasciata</value>
+  </data>
+  <data name="(1=RELEASED, 0=TRAPPED)" xml:space="preserve">
+    <value>(1=Rilasciato, 0=Intrappolato)</value>
+  </data>
+  <data name="COMMAND RELEASE" xml:space="preserve">
+    <value>Rilascio del comando</value>
+  </data>
+  <data name="(1=UNLOCK)" xml:space="preserve">
+    <value>(1=Sblocca)</value>
+  </data>
+  <data name="WAITING COOLING AFTER OVERLOAD" xml:space="preserve">
+    <value>Attesa raffreddamento dopo sovraccarico</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>Temperatura massima del cambio</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE - STOP MOTOR" xml:space="preserve">
+    <value>Temperatura massima riduttore - Arresto motore</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE TSHA" xml:space="preserve">
+    <value>Temperatura massima del cambio Tsha</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE TSH" xml:space="preserve">
+    <value>Temperatura massima riduttore Tsh</value>
+  </data>
+  <data name="HIDE START BUTTON ON HMI  (FALSE=SHOW START PB)" xml:space="preserve">
+    <value>Nascondi pulsante Start su Hmi (False=Mostra Start Pb)</value>
+  </data>
+  <data name="READY TO START  (FALSE WHEN STARTED)" xml:space="preserve">
+    <value>Pronto per iniziare (falso quando avviato)</value>
+  </data>
+  <data name="HYDRAULIC SAFETY" xml:space="preserve">
+    <value>Sicurezza idraulica</value>
+  </data>
+  <data name="HYDRAULIC UNIT SAFETIES NOT OK" xml:space="preserve">
+    <value>Le sicurezze dell'unità idraulica non sono corrette</value>
+  </data>
+  <data name="OIL FILTER NOT OK" xml:space="preserve">
+    <value>Filtro dell'olio non ok</value>
+  </data>
+  <data name="OIL CIRCUIT SHUTOFF VALVE NOT OPEN" xml:space="preserve">
+    <value>Valvola di intercettazione del circuito dell'olio non aperta</value>
+  </data>
+  <data name="OIL FILTER" xml:space="preserve">
+    <value>Filtro dell'olio</value>
+  </data>
+  <data name="SHUTOFF VALVE 1" xml:space="preserve">
+    <value>Valvola di intercettazione 1</value>
+  </data>
+  <data name="SHUTOFF VALVE 2" xml:space="preserve">
+    <value>Valvola di intercettazione 2</value>
+  </data>
+  <data name="(1=RUN)" xml:space="preserve">
+    <value>(1=Corri)</value>
+  </data>
+  <data name="OIL TEMPERATURE OK FOR CIRCULATION" xml:space="preserve">
+    <value>Temperatura dell'olio ok per la circolazione</value>
+  </data>
+  <data name="OIL TEMPERATURE NOT OK FOR CIRCULATION" xml:space="preserve">
+    <value>La temperatura dell'olio non va bene per la circolazione</value>
+  </data>
+  <data name="OIL MINIMUM LEVEL" xml:space="preserve">
+    <value>Livello minimo dell'olio</value>
+  </data>
+  <data name="OIL MINIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Livello minimo dell'olio non corretto</value>
+  </data>
+  <data name="TEMPERATURE OK FOR COOLING" xml:space="preserve">
+    <value>Temperatura ok per il raffreddamento</value>
+  </data>
+  <data name="NO COOLING IS REQUIRED (LOW TEMPERATURE)" xml:space="preserve">
+    <value>Non è richiesto alcun raffreddamento (bassa temperatura)</value>
+  </data>
+  <data name="SHREDDER LOCAL+POWER DISCONNECT OPEN (BOTH)" xml:space="preserve">
+    <value>Distruggidocumenti locale+Disconnessione alimentazione aperta (entrambi)</value>
+  </data>
+  <data name="SHREDDER DISCONNECTORS CLOSED" xml:space="preserve">
+    <value>Sezionatori trituratore chiusi</value>
+  </data>
+  <data name="SHREDDER SAFETY KEY EXTRACTED FORM THE LOCK" xml:space="preserve">
+    <value>Chiave di sicurezza del trituratore estratta dalla serratura</value>
+  </data>
+  <data name="SAFETY KEY NOT EXTRACTED" xml:space="preserve">
+    <value>Chiave di sicurezza non estratta</value>
+  </data>
+  <data name="OIL TEMPERATURE OK FOR HEATING" xml:space="preserve">
+    <value>Temperatura dell'olio ok per il riscaldamento</value>
+  </data>
+  <data name="OIL DOES NOT NEED TO BE HEATED" xml:space="preserve">
+    <value>L'olio non ha bisogno di essere riscaldato</value>
+  </data>
+  <data name="COOLING VALVE IS NOT ON (ROTOR WILL BE STOPPED IN A SHORT TIME)" xml:space="preserve">
+    <value>La valvola di raffreddamento non è attiva (il rotore verrà arrestato in breve tempo)</value>
+  </data>
+  <data name="COOLING VALVE IS NOT ON (ROTOR STOP)" xml:space="preserve">
+    <value>La valvola di raffreddamento non è attiva (arresto del rotore)</value>
+  </data>
+  <data name="FAST SPEED" xml:space="preserve">
+    <value>Velocità veloce</value>
+  </data>
+  <data name="POSITION FORWARD NOT OK" xml:space="preserve">
+    <value>Posizione avanti non ok</value>
+  </data>
+  <data name="POSITION REVERSE NOT OK" xml:space="preserve">
+    <value>Posizione inversa non ok</value>
+  </data>
+  <data name="BOTH POSITIONS" xml:space="preserve">
+    <value>Entrambe le posizioni</value>
+  </data>
+  <data name="DISABLED BY OPERATOR" xml:space="preserve">
+    <value>Disabilitato dall'operatore</value>
+  </data>
+  <data name="READY FOR MEASURING" xml:space="preserve">
+    <value>Pronto per la misurazione</value>
+  </data>
+  <data name="COMPONENT PREPARED OK FOR PRODUCTION" xml:space="preserve">
+    <value>Componente preparato ok per la produzione</value>
+  </data>
+  <data name="SENSOR ON (CAB ON + 24V SENSOR SUPPLY OK - AIN OR DIN)" xml:space="preserve">
+    <value>Sensore acceso (cabina accesa + alimentazione sensore 24 V ok - Ain o Din)</value>
+  </data>
+  <data name="HIGH TEMPERATURE WARNING" xml:space="preserve">
+    <value>Avviso di alta temperatura</value>
+  </data>
+  <data name="OIL MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>Temperatura massima dell'olio</value>
+  </data>
+  <data name="OIL TEMPERATURE" xml:space="preserve">
+    <value>Temperatura dell'olio</value>
+  </data>
+  <data name="DOWNSTREAM OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Downstream Ok (segnale esterno)</value>
+  </data>
+  <data name="SOREMA PLANT OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema Plant Ok Per Ricevere Materiale</value>
+  </data>
+  <data name="(1=SOREMA OK TO RECEIVE)" xml:space="preserve">
+    <value>(1=Sorema OK Ricevere)</value>
+  </data>
+  <data name="CYCLE INTERLOCKS" xml:space="preserve">
+    <value>Interblocchi del ciclo</value>
+  </data>
+  <data name="PRODUCTION SPEED (IN CONSTANT MODE)" xml:space="preserve">
+    <value>Velocità di produzione (in modalità costante)</value>
+  </data>
+  <data name="ROTOR REVERSE" xml:space="preserve">
+    <value>Inversione del rotore</value>
+  </data>
+  <data name="PUSHER STEP BACK + STOP MATERIAL (IF SELECTED)" xml:space="preserve">
+    <value>Pusher Step Back + Stop Material (se selezionato)</value>
+  </data>
+  <data name="STOP UPSTREAM MATERIAL" xml:space="preserve">
+    <value>Ferma il materiale a monte</value>
+  </data>
+  <data name="PRODUCTION SPEED - ADVANCING" xml:space="preserve">
+    <value>Velocità di produzione - Avanzamento</value>
+  </data>
+  <data name="ENABLE" xml:space="preserve">
+    <value>Abilitare</value>
+  </data>
+  <data name="SWIPE ACCESS CARD TO UNLOCK" xml:space="preserve">
+    <value>Scorri la carta di accesso per sbloccare</value>
+  </data>
+  <data name="SHREDDING" xml:space="preserve">
+    <value>Prerompitore</value>
+  </data>
+  <data name="BUTTONS" xml:space="preserve">
+    <value>Pulsanti</value>
+  </data>
+  <data name="PROCESS SIGNALS" xml:space="preserve">
+    <value>Segnali di processo</value>
+  </data>
+  <data name="TREND LIMITS" xml:space="preserve">
+    <value>Limiti di tendenza</value>
+  </data>
+  <data name="COMPONENT STATUS STD BITMASK" xml:space="preserve">
+    <value>Componente Stato Std Bitmask</value>
+  </data>
+  <data name="FUNCTION" xml:space="preserve">
+    <value>Funzione</value>
+  </data>
+  <data name="PLCTAG" xml:space="preserve">
+    <value>Plctag</value>
+  </data>
+  <data name="HMIS BEACON PROTECTION" xml:space="preserve">
+    <value>Protezione Hmis Beacon</value>
+  </data>
+  <data name="SYS - CUMULATIVE HMIS BEACON" xml:space="preserve">
+    <value>Sys - Cumulativo Hmis Beacon</value>
+  </data>
+  <data name="SYS - ETHERNET SWITCH OK" xml:space="preserve">
+    <value>Sys - Commutatore Ethernet Ok</value>
+  </data>
+  <data name="SYS - SIREN (FOR EXTERNAL USES)" xml:space="preserve">
+    <value>Sys - Sirena (per usi esterni)</value>
+  </data>
+  <data name="SUBZONE SHREDDING" xml:space="preserve">
+    <value>Triturazione della sottozona</value>
+  </data>
+  <data name="AUXILIARY TRANSFORMER SECONDARY PROTECTION" xml:space="preserve">
+    <value>Protezione secondaria del trasformatore ausiliario</value>
+  </data>
+  <data name="ANALOG OUTPUTS PROTECTION" xml:space="preserve">
+    <value>Protezione uscite analogiche</value>
+  </data>
+  <data name="BUTTONSPANEL" xml:space="preserve">
+    <value>Pannello pulsanti</value>
+  </data>
+  <data name="EXPORT TO CSV" xml:space="preserve">
+    <value>Esporta in CSV</value>
+  </data>
+  <data name="TREND WINDOW" xml:space="preserve">
+    <value>Grafico in finestra</value>
+  </data>
+  <data name="LIVE CHARTING" xml:space="preserve">
+    <value>In Tempo Reale</value>
+  </data>
+  <data name="MESSAGING" xml:space="preserve">
+    <value>Messaggiando</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NO MATERIAL'   (0=NO MESSAGE)" xml:space="preserve">
+    <value>Ritardo per messaggio 'Nessun materiale' (0=Nessun messaggio)</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NOT OK FOR PROCESS'   (0=NO MESSAGE)" xml:space="preserve">
+    <value>Ritardo per messaggio 'Non Ok Per il Processo' (0=Nessun messaggio)</value>
+  </data>
+  <data name="STOP FEEDING" xml:space="preserve">
+    <value>Arresto materiale</value>
+  </data>
+  <data name="RESTART FEEDING" xml:space="preserve">
+    <value>Riprendi materiale</value>
+  </data>
+  <data name="EMPTY HOPPER" xml:space="preserve">
+    <value>Tramoggia vuota</value>
+  </data>
+  <data name="SHREDDER" xml:space="preserve">
+    <value>Prerompitore</value>
+  </data>
+  <data name="ROTOR" xml:space="preserve">
+    <value>Rotore</value>
+  </data>
+  <data name="PUSHER" xml:space="preserve">
+    <value>Spintore</value>
+  </data>
+  <data name="ENABLE MODULATION OF PUSHER ADVANCING SPEED" xml:space="preserve">
+    <value>Abilita modulazione velocità dello spintore</value>
+  </data>
+  <data name="PUSHER MAXIMUM SPEED AT ROTOR MINIMUM CURRENT" xml:space="preserve">
+    <value>Massima velocità Spintore a minima corrente del Rotore</value>
+  </data>
+  <data name="PUSHER MINIMUM SPEED AT ROTOR MAXIMUM CURRENT" xml:space="preserve">
+    <value>Minima velocità Spintore a massima corrente del Rotore</value>
+  </data>
+  <data name="FINAL PUSHING TIME IN MAXIMUM FORWARD POSITION" xml:space="preserve">
+    <value>Tempo finale di spinta alla massima posizione avanzata</value>
+  </data>
+  <data name="PUSHER STEP-BACK TIME" xml:space="preserve">
+    <value>Tempo di step-back dello Spintore</value>
+  </data>
+  <data name="LOW" xml:space="preserve">
+    <value>Basso</value>
+  </data>
+  <data name="USER DELETED SUCCESSFULLY" xml:space="preserve">
+    <value>Utente eliminato con successo</value>
+  </data>
+  <data name="COULD NOT DELETE THE USER" xml:space="preserve">
+    <value>Eliminazione utente fallita</value>
+  </data>
+  <data name="USER ADDED" xml:space="preserve">
+    <value>Utente aggiunto</value>
+  </data>
+  <data name="USER GROUP ADDED" xml:space="preserve">
+    <value>Gruppo utente aggiunto</value>
+  </data>
+  <data name="USER GROUP DELETED SUCCESSFULLY" xml:space="preserve">
+    <value>Gruppo utente eliminato con successo</value>
+  </data>
+  <data name="COULD NOT DELETE THE USER GROUP" xml:space="preserve">
+    <value>Eliminazione gruppo utente fallita</value>
+  </data>
+  <data name="PARAMETERS SAVED SUCCESSFULLY" xml:space="preserve">
+    <value>Parameteri salvati con successo</value>
+  </data>
+  <data name="USER SAVED SUCCESSFULLY" xml:space="preserve">
+    <value>Utente salvato con successo</value>
+  </data>
+  <data name="USER GROUP SAVED SUCCESSFULLY" xml:space="preserve">
+    <value>Gruppo utente salvato con successo</value>
+  </data>
+  <data name="COULD NOT SAVE THE PARAMETERS" xml:space="preserve">
+    <value>Salvataggio parametri fallito</value>
+  </data>
 </root>
