--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -2149,7 +2149,7 @@
     <value>Message</value>
   </data>
   <data name="(4-20MA)" xml:space="preserve">
-    <value>(4-20Ma)</value>
+    <value>(4-20mA)</value>
   </data>
   <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
     <value>Motor Maximum Amperage Exceeded (&gt;115% Of Nominal Amp For 15 Sec)</value>
@@ -3182,5 +3182,470 @@
   <data name="PlantOverview" xml:space="preserve">
     <value>Plant Overview</value>
     <comment>SystemPermissions</comment>
+  </data>
+  <data name="SHREDDER ROTOR" xml:space="preserve">
+    <value>Shredder Rotor</value>
+  </data>
+  <data name="SHREDDER SAFETY KEY" xml:space="preserve">
+    <value>Shredder Safety Key</value>
+  </data>
+  <data name="GEARBOX COOILNG FAN" xml:space="preserve">
+    <value>Gearbox Cooilng Fan</value>
+  </data>
+  <data name="PUSHER OIL PUMP" xml:space="preserve">
+    <value>Pusher Oil Pump</value>
+  </data>
+  <data name="COOLING SYSTEM - OIL RECIRC. PUMP" xml:space="preserve">
+    <value>Cooling System - Oil Recirc. Pump</value>
+  </data>
+  <data name="HYDRAULIC OIL COOILNG FAN" xml:space="preserve">
+    <value>Hydraulic Oil Cooilng Fan</value>
+  </data>
+  <data name="MAINTENANCE AUX. HDRAULIC UNIT" xml:space="preserve">
+    <value>Maintenance Aux. Hdraulic Unit</value>
+  </data>
+  <data name="HYDRAULIC OIL HEATING RESISTOR" xml:space="preserve">
+    <value>Hydraulic Oil Heating Resistor</value>
+  </data>
+  <data name="ROTOR COOLING VALVE" xml:space="preserve">
+    <value>Rotor Cooling Valve</value>
+  </data>
+  <data name="BYPASS - HIGH SPEED" xml:space="preserve">
+    <value>Bypass - High Speed</value>
+  </data>
+  <data name="BYPASS - LOW SPEED" xml:space="preserve">
+    <value>Bypass - Low Speed</value>
+  </data>
+  <data name="PUSHER FORWARD/REVERSE" xml:space="preserve">
+    <value>Pusher Forward/Reverse</value>
+  </data>
+  <data name="SHREDDER HOPPER LEVEL" xml:space="preserve">
+    <value>Shredder Hopper Level</value>
+  </data>
+  <data name="HYDRAULIC OIL TEMPERATURE" xml:space="preserve">
+    <value>Hydraulic Oil Temperature</value>
+  </data>
+  <data name="DOWNSTREAM OK FOR MATERIAL" xml:space="preserve">
+    <value>Downstream Ok For Material</value>
+  </data>
+  <data name="SOREMA SHREDDER OK FOR MATERIAL" xml:space="preserve">
+    <value>Sorema Shredder Ok For Material</value>
+  </data>
+  <data name="SHREDER OPEN CYCLE" xml:space="preserve">
+    <value>Shreder Open Cycle</value>
+  </data>
+  <data name="SHREDDING CYCLE" xml:space="preserve">
+    <value>Shredding Cycle</value>
+  </data>
+  <data name="DIRECTIONONE" xml:space="preserve">
+    <value>Directionone</value>
+  </data>
+  <data name="FORWARD" xml:space="preserve">
+    <value>Forward</value>
+  </data>
+  <data name="DIRECTIONTWO" xml:space="preserve">
+    <value>Directiontwo</value>
+  </data>
+  <data name="REVERSE" xml:space="preserve">
+    <value>Reverse</value>
+  </data>
+  <data name="SAFETY NOT OK" xml:space="preserve">
+    <value>Safety Not Ok</value>
+  </data>
+  <data name="INVERTER POWER UP NOT OK" xml:space="preserve">
+    <value>Inverter Power Up Not Ok</value>
+  </data>
+  <data name="HIGH LOAD CONDITION" xml:space="preserve">
+    <value>High Load Condition</value>
+  </data>
+  <data name="GRILL POSITION OK" xml:space="preserve">
+    <value>Grill Position Ok</value>
+  </data>
+  <data name="GRILL POSITION NOT OK FOR RUNNING" xml:space="preserve">
+    <value>Grill Position Not Ok For Running</value>
+  </data>
+  <data name="ROTOR COOLING" xml:space="preserve">
+    <value>Rotor Cooling</value>
+  </data>
+  <data name="ROTOR COOLING NOT OK" xml:space="preserve">
+    <value>Rotor Cooling Not Ok</value>
+  </data>
+  <data name="MOTOR CURRENT NOT OK FOR MATERIAL" xml:space="preserve">
+    <value>Motor Current Not Ok For Material</value>
+  </data>
+  <data name="PERSISTENT CURRENT (&gt;3 MIN) ABOVE MINIMUM WITH NO INCOMING MATERIAL" xml:space="preserve">
+    <value>Persistent Current (&gt;3 Min) Above Minimum With No Incoming Material</value>
+  </data>
+  <data name="(0-10V)" xml:space="preserve">
+    <value>(0-10V)</value>
+  </data>
+  <data name="POWER DISCONNECT (ON THE CABINET)" xml:space="preserve">
+    <value>Power Disconnect (On The Cabinet)</value>
+  </data>
+  <data name="(1=RUNNING)" xml:space="preserve">
+    <value>(1=Running)</value>
+  </data>
+  <data name="GRILL POSITION CLOSED" xml:space="preserve">
+    <value>Grill Position Closed</value>
+  </data>
+  <data name="GRILL POSITION LS" xml:space="preserve">
+    <value>Grill Position Ls</value>
+  </data>
+  <data name="STOPPED" xml:space="preserve">
+    <value>Stopped</value>
+  </data>
+  <data name="ROTOR STOPPED" xml:space="preserve">
+    <value>Rotor Stopped</value>
+  </data>
+  <data name="(1=STOPPED)" xml:space="preserve">
+    <value>(1=Stopped)</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD 1 (REACTION ARM)" xml:space="preserve">
+    <value>Mechanical Overload 1 (Reaction Arm)</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH 1" xml:space="preserve">
+    <value>Max Torque Limit Switch 1</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD 2 (REACTION ARM)" xml:space="preserve">
+    <value>Mechanical Overload 2 (Reaction Arm)</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH 2" xml:space="preserve">
+    <value>Max Torque Limit Switch 2</value>
+  </data>
+  <data name="(1=FORWARD)" xml:space="preserve">
+    <value>(1=Forward)</value>
+  </data>
+  <data name="(1=REVERSE)" xml:space="preserve">
+    <value>(1=Reverse)</value>
+  </data>
+  <data name="COMMAND STANDSTILL RELAY RESET" xml:space="preserve">
+    <value>Command Standstill Relay Reset</value>
+  </data>
+  <data name="STANDSTILL RELAY RESET" xml:space="preserve">
+    <value>Standstill Relay Reset</value>
+  </data>
+  <data name="(1=RESET)" xml:space="preserve">
+    <value>(1=Reset)</value>
+  </data>
+  <data name="DISABLE COMPONENT ON START (SELECTOR)" xml:space="preserve">
+    <value>Disable Component On Start (Selector)</value>
+  </data>
+  <data name="ON COMMAND (ANY DIRECTION)" xml:space="preserve">
+    <value>On Command (Any Direction)</value>
+  </data>
+  <data name="SELECTED DIRECTION" xml:space="preserve">
+    <value>Selected Direction</value>
+  </data>
+  <data name="ENABLE DIRECTION SELECTION (SHOW IN HMI)" xml:space="preserve">
+    <value>Enable Direction Selection (Show In Hmi)</value>
+  </data>
+  <data name="ALL CONDITIONS TO UNLOCK" xml:space="preserve">
+    <value>All Conditions To Unlock</value>
+  </data>
+  <data name="SAFETY CONDITIONS NOT OK TO UNLOCK" xml:space="preserve">
+    <value>Safety Conditions Not Ok To Unlock</value>
+  </data>
+  <data name="KEY UNLOCKED WITHOUT UNLOCK COMMAND" xml:space="preserve">
+    <value>Key Unlocked Without Unlock Command</value>
+  </data>
+  <data name="LOSS OF SAFETY CONDITIONS" xml:space="preserve">
+    <value>Loss Of Safety Conditions</value>
+  </data>
+  <data name="SAFETIES" xml:space="preserve">
+    <value>Safeties</value>
+  </data>
+  <data name="SAFETY KEY RELEASED" xml:space="preserve">
+    <value>Safety Key Released</value>
+  </data>
+  <data name="(1=RELEASED, 0=TRAPPED)" xml:space="preserve">
+    <value>(1=Released, 0=Trapped)</value>
+  </data>
+  <data name="COMMAND RELEASE" xml:space="preserve">
+    <value>Command Release</value>
+  </data>
+  <data name="(1=UNLOCK)" xml:space="preserve">
+    <value>(1=Unlock)</value>
+  </data>
+  <data name="WAITING COOLING AFTER OVERLOAD" xml:space="preserve">
+    <value>Waiting Cooling After Overload</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>Gearbox Maximum Temperature</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE - STOP MOTOR" xml:space="preserve">
+    <value>Gearbox Maximum Temperature - Stop Motor</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE TSHA" xml:space="preserve">
+    <value>Gearbox Maximum Temperature Tsha</value>
+  </data>
+  <data name="GEARBOX MAXIMUM TEMPERATURE TSH" xml:space="preserve">
+    <value>Gearbox Maximum Temperature Tsh</value>
+  </data>
+  <data name="HIDE START BUTTON ON HMI  (FALSE=SHOW START PB)" xml:space="preserve">
+    <value>Hide Start Button On Hmi  (False=Show Start Pb)</value>
+  </data>
+  <data name="READY TO START  (FALSE WHEN STARTED)" xml:space="preserve">
+    <value>Ready To Start  (False When Started)</value>
+  </data>
+  <data name="HYDRAULIC SAFETY" xml:space="preserve">
+    <value>Hydraulic Safety</value>
+  </data>
+  <data name="HYDRAULIC UNIT SAFETIES NOT OK" xml:space="preserve">
+    <value>Hydraulic Unit Safeties Not Ok</value>
+  </data>
+  <data name="OIL FILTER NOT OK" xml:space="preserve">
+    <value>Oil Filter Not Ok</value>
+  </data>
+  <data name="OIL CIRCUIT SHUTOFF VALVE NOT OPEN" xml:space="preserve">
+    <value>Oil Circuit Shutoff Valve Not Open</value>
+  </data>
+  <data name="OIL FILTER" xml:space="preserve">
+    <value>Oil Filter</value>
+  </data>
+  <data name="SHUTOFF VALVE 1" xml:space="preserve">
+    <value>Shutoff Valve 1</value>
+  </data>
+  <data name="SHUTOFF VALVE 2" xml:space="preserve">
+    <value>Shutoff Valve 2</value>
+  </data>
+  <data name="(1=RUN)" xml:space="preserve">
+    <value>(1=Run)</value>
+  </data>
+  <data name="OIL TEMPERATURE OK FOR CIRCULATION" xml:space="preserve">
+    <value>Oil Temperature Ok For Circulation</value>
+  </data>
+  <data name="OIL TEMPERATURE NOT OK FOR CIRCULATION" xml:space="preserve">
+    <value>Oil Temperature Not Ok For Circulation</value>
+  </data>
+  <data name="OIL MINIMUM LEVEL" xml:space="preserve">
+    <value>Oil Minimum Level</value>
+  </data>
+  <data name="OIL MINIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Oil Minimum Level Not Ok</value>
+  </data>
+  <data name="TEMPERATURE OK FOR COOLING" xml:space="preserve">
+    <value>Temperature Ok For Cooling</value>
+  </data>
+  <data name="NO COOLING IS REQUIRED (LOW TEMPERATURE)" xml:space="preserve">
+    <value>No Cooling Is Required (Low Temperature)</value>
+  </data>
+  <data name="SHREDDER LOCAL+POWER DISCONNECT OPEN (BOTH)" xml:space="preserve">
+    <value>Shredder Local+Power Disconnect Open (Both)</value>
+  </data>
+  <data name="SHREDDER DISCONNECTORS CLOSED" xml:space="preserve">
+    <value>Shredder Disconnectors Closed</value>
+  </data>
+  <data name="SHREDDER SAFETY KEY EXTRACTED FORM THE LOCK" xml:space="preserve">
+    <value>Shredder Safety Key Extracted Form The Lock</value>
+  </data>
+  <data name="SAFETY KEY NOT EXTRACTED" xml:space="preserve">
+    <value>Safety Key Not Extracted</value>
+  </data>
+  <data name="OIL TEMPERATURE OK FOR HEATING" xml:space="preserve">
+    <value>Oil Temperature Ok For Heating</value>
+  </data>
+  <data name="OIL DOES NOT NEED TO BE HEATED" xml:space="preserve">
+    <value>Oil Does Not Need To Be Heated</value>
+  </data>
+  <data name="COOLING VALVE IS NOT ON (ROTOR WILL BE STOPPED IN A SHORT TIME)" xml:space="preserve">
+    <value>Cooling Valve Is Not On (Rotor Will Be Stopped In A Short Time)</value>
+  </data>
+  <data name="COOLING VALVE IS NOT ON (ROTOR STOP)" xml:space="preserve">
+    <value>Cooling Valve Is Not On (Rotor Stop)</value>
+  </data>
+  <data name="FAST SPEED" xml:space="preserve">
+    <value>Fast Speed</value>
+  </data>
+  <data name="POSITION FORWARD NOT OK" xml:space="preserve">
+    <value>Position Forward Not Ok</value>
+  </data>
+  <data name="POSITION REVERSE NOT OK" xml:space="preserve">
+    <value>Position Reverse Not Ok</value>
+  </data>
+  <data name="BOTH POSITIONS" xml:space="preserve">
+    <value>Both Positions</value>
+  </data>
+  <data name="DISABLED BY OPERATOR" xml:space="preserve">
+    <value>Disabled By Operator</value>
+  </data>
+  <data name="READY FOR MEASURING" xml:space="preserve">
+    <value>Ready For Measuring</value>
+  </data>
+  <data name="COMPONENT PREPARED OK FOR PRODUCTION" xml:space="preserve">
+    <value>Component Prepared Ok For Production</value>
+  </data>
+  <data name="SENSOR ON (CAB ON + 24V SENSOR SUPPLY OK - AIN OR DIN)" xml:space="preserve">
+    <value>Sensor On (Cab On + 24V Sensor Supply Ok - Ain Or Din)</value>
+  </data>
+  <data name="HIGH TEMPERATURE WARNING" xml:space="preserve">
+    <value>High Temperature Warning</value>
+  </data>
+  <data name="OIL MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>Oil Maximum Temperature</value>
+  </data>
+  <data name="OIL TEMPERATURE" xml:space="preserve">
+    <value>Oil Temperature</value>
+  </data>
+  <data name="DOWNSTREAM OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Downstream Ok (External Signal)</value>
+  </data>
+  <data name="SOREMA PLANT OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema Plant Ok To Receive Material</value>
+  </data>
+  <data name="(1=SOREMA OK TO RECEIVE)" xml:space="preserve">
+    <value>(1=Sorema Ok To Receive)</value>
+  </data>
+  <data name="CYCLE INTERLOCKS" xml:space="preserve">
+    <value>Cycle Interlocks</value>
+  </data>
+  <data name="PRODUCTION SPEED (IN CONSTANT MODE)" xml:space="preserve">
+    <value>Production Speed (In Constant Mode)</value>
+  </data>
+  <data name="ROTOR REVERSE" xml:space="preserve">
+    <value>Rotor Reverse</value>
+  </data>
+  <data name="PUSHER STEP BACK + STOP MATERIAL (IF SELECTED)" xml:space="preserve">
+    <value>Pusher Step Back + Stop Material (If Selected)</value>
+  </data>
+  <data name="STOP UPSTREAM MATERIAL" xml:space="preserve">
+    <value>Stop Upstream Material</value>
+  </data>
+  <data name="PRODUCTION SPEED - ADVANCING" xml:space="preserve">
+    <value>Production Speed - Advancing</value>
+  </data>
+  <data name="ENABLE" xml:space="preserve">
+    <value>Enable</value>
+  </data>
+  <data name="SWIPE ACCESS CARD TO UNLOCK" xml:space="preserve">
+    <value>Swipe access card to unlock</value>
+  </data>
+  <data name="SHREDDING" xml:space="preserve">
+    <value>Shredding</value>
+  </data>
+  <data name="BUTTONS" xml:space="preserve">
+    <value>Buttons</value>
+  </data>
+  <data name="PROCESS SIGNALS" xml:space="preserve">
+    <value>Process Signals</value>
+  </data>
+  <data name="TREND LIMITS" xml:space="preserve">
+    <value>Trend Limits</value>
+  </data>
+  <data name="COMPONENT STATUS STD BITMASK" xml:space="preserve">
+    <value>Component Status Std Bitmask</value>
+  </data>
+  <data name="FUNCTION" xml:space="preserve">
+    <value>Function</value>
+  </data>
+  <data name="PLCTAG" xml:space="preserve">
+    <value>Plctag</value>
+  </data>
+  <data name="HMIS BEACON PROTECTION" xml:space="preserve">
+    <value>HMI Beacon Protection</value>
+  </data>
+  <data name="SYS - CUMULATIVE HMIS BEACON" xml:space="preserve">
+    <value>Sys - Cumulative Hmis Beacon</value>
+  </data>
+  <data name="SYS - ETHERNET SWITCH OK" xml:space="preserve">
+    <value>Sys - Ethernet Switch Ok</value>
+  </data>
+  <data name="SYS - SIREN (FOR EXTERNAL USES)" xml:space="preserve">
+    <value>Sys - Siren (For External Uses)</value>
+  </data>
+  <data name="SUBZONE SHREDDING" xml:space="preserve">
+    <value>Subzone Shredding</value>
+  </data>
+  <data name="AUXILIARY TRANSFORMER SECONDARY PROTECTION" xml:space="preserve">
+    <value>Auxiliary Transformer Secondary Protection</value>
+  </data>
+  <data name="ANALOG OUTPUTS PROTECTION" xml:space="preserve">
+    <value>Analog Outputs Protection</value>
+  </data>
+  <data name="BUTTONSPANEL" xml:space="preserve">
+    <value>Buttonspanel</value>
+  </data>
+  <data name="EXPORT TO CSV" xml:space="preserve">
+    <value>Export To Csv</value>
+  </data>
+  <data name="TREND WINDOW" xml:space="preserve">
+    <value>Trend Window</value>
+  </data>
+  <data name="LIVE CHARTING" xml:space="preserve">
+    <value>Live Charting</value>
+  </data>
+  <data name="MESSAGING" xml:space="preserve">
+    <value>Messaging</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NO MATERIAL'   (0=NO MESSAGE)" xml:space="preserve">
+    <value>Delay for Message 'No Material'   (0=No Message)</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NOT OK FOR PROCESS'   (0=NO MESSAGE)" xml:space="preserve">
+    <value>Delay for Message 'Not OK For Process'   (0=No Message)</value>
+  </data>
+  <data name="STOP FEEDING" xml:space="preserve">
+    <value>Stop Feeding</value>
+  </data>
+  <data name="RESTART FEEDING" xml:space="preserve">
+    <value>Restart Feeding</value>
+  </data>
+  <data name="EMPTY HOPPER" xml:space="preserve">
+    <value>Empty Hopper</value>
+  </data>
+  <data name="SHREDDER" xml:space="preserve">
+    <value>Shredder</value>
+  </data>
+  <data name="ROTOR" xml:space="preserve">
+    <value>Rotor</value>
+  </data>
+  <data name="PUSHER" xml:space="preserve">
+    <value>Pusher</value>
+  </data>
+  <data name="ENABLE MODULATION OF PUSHER ADVANCING SPEED" xml:space="preserve">
+    <value>Enable Modulation of Pusher Advancing Speed</value>
+  </data>
+  <data name="PUSHER MAXIMUM SPEED AT ROTOR MINIMUM CURRENT" xml:space="preserve">
+    <value>Pusher Maximum Speed At Rotor Minimum Current</value>
+  </data>
+  <data name="PUSHER MINIMUM SPEED AT ROTOR MAXIMUM CURRENT" xml:space="preserve">
+    <value>Pusher Minimum Speed At Rotor Maximum Current</value>
+  </data>
+  <data name="FINAL PUSHING TIME IN MAXIMUM FORWARD POSITION" xml:space="preserve">
+    <value>Final Pushing Time in Maximum Forward Position</value>
+  </data>
+  <data name="PUSHER STEP-BACK TIME" xml:space="preserve">
+    <value>Pusher Step-Back Time</value>
+  </data>
+  <data name="LOW" xml:space="preserve">
+    <value>Low</value>
+  </data>
+  <data name="USER DELETED SUCCESSFULLY" xml:space="preserve">
+    <value>User deleted successfully</value>
+  </data>
+  <data name="COULD NOT DELETE THE USER" xml:space="preserve">
+    <value>Could not delete the User</value>
+  </data>
+  <data name="USER ADDED" xml:space="preserve">
+    <value>User added</value>
+  </data>
+  <data name="USER GROUP ADDED" xml:space="preserve">
+    <value>User group added</value>
+  </data>
+  <data name="USER GROUP DELETED SUCCESSFULLY" xml:space="preserve">
+    <value>User group deleted successfully</value>
+  </data>
+  <data name="COULD NOT DELETE THE USER GROUP" xml:space="preserve">
+    <value>Could not delete the User group</value>
+  </data>
+  <data name="PARAMETERS SAVED SUCCESSFULLY" xml:space="preserve">
+    <value>Parameters saved successfully</value>
+  </data>
+  <data name="COULD NOT SAVE THE PARAMETERS" xml:space="preserve">
+    <value>Could not save the Parameters</value>
+  </data>
+  <data name="USER SAVED SUCCESSFULLY" xml:space="preserve">
+    <value>User saved successfully</value>
+  </data>
+  <data name="USER GROUP SAVED SUCCESSFULLY" xml:space="preserve">
+    <value>User group saved successfully</value>
   </data>
 </root>
