--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -1903,7 +1903,7 @@
     <value>Mensaje</value>
   </data>
   <data name="(4-20MA)" xml:space="preserve">
-    <value>(4-20 Ma)</value>
+    <value>(4-20 mA)</value>
   </data>
   <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
     <value>Amperaje máximo del motor excedido (&gt;115 % del amperaje nominal durante 15 segundos)</value>
